--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,9 +61,9 @@ jobs:
             host_os: ubuntu-latest
             use_cross: true
 
-#          - target: mips64-openwrt-linux-musl
-#            filename: file_zip_linux_mips64(openwrt)
-#            host_os: ubuntu-latest
+          - target: mips64-openwrt-linux-musl
+            filename: file_zip_linux_mips64(openwrt)
+            host_os: ubuntu-latest
 
           - target: mips64-unknown-linux-muslabi64
             filename: file_zip_linux_mips64
@@ -75,30 +75,30 @@ jobs:
             host_os: ubuntu-latest
             use_cross: true
 
-#          - target: powerpc64-unknown-linux-musl
-#            filename: file_zip_linux_ppc64
-#            host_os: ubuntu-latest
+          - target: powerpc64-unknown-linux-musl
+            filename: file_zip_linux_ppc64
+            host_os: ubuntu-latest
 
-#          - target: s390x-unknown-linux-musl
-#            filename: file_zip_linux_s390x
-#            host_os: ubuntu-latest
+          - target: s390x-unknown-linux-musl
+            filename: file_zip_linux_s390x
+            host_os: ubuntu-latest
 
           - target: x86_64-unknown-netbsd
             filename: file_zip_netbsd_x64
             host_os: ubuntu-latest
             use_cross: true
 
-#          - target: i686-unknown-openbsd
-#            filename: file_zip_openbsd_386
-#            host_os: ubuntu-latest
+          - target: i686-unknown-openbsd
+            filename: file_zip_openbsd_386
+            host_os: ubuntu-latest
 
-#          - target: x86_64-unknown-openbsd
-#            filename: file_zip_openbsd_x64
-#            host_os: ubuntu-latest
+          - target: x86_64-unknown-openbsd
+            filename: file_zip_openbsd_x64
+            host_os: ubuntu-latest
 
-#          - target: aarch64-unknown-openbsd
-#            filename: file_zip_openbsd_arm64
-#            host_os: ubuntu-latest
+          - target: aarch64-unknown-openbsd
+            filename: file_zip_openbsd_arm64
+            host_os: ubuntu-latest
 
           - target: i686-unknown-freebsd
             filename: file_zip_freebsd_386
@@ -110,13 +110,13 @@ jobs:
             host_os: ubuntu-latest
             use_cross: true
 
-#          - target: armv7-unknown-freebsd
-#            filename: file_zip_freebsd_arm
-#            host_os: ubuntu-latest
+          - target: armv7-unknown-freebsd
+            filename: file_zip_freebsd_arm
+            host_os: ubuntu-latest
 
-#          - target: aarch64-unknown-freebsd
-#            filename: file_zip_freebsd_arm64
-#            host_os: ubuntu-latest
+          - target: aarch64-unknown-freebsd
+            filename: file_zip_freebsd_arm64
+            host_os: ubuntu-latest
 
           - target: x86_64-apple-darwin
             filename: file_zip_darwin_amd64
