--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,30 +31,30 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: x86_64-pc-windows-msvc
-            filename: file_zip_win32_x64.exe
-            host_os: windows-latest
-
-          - target: x86_64-unknown-linux-musl
-            filename: file_zip_linux_x64
-            host_os: ubuntu-latest
-            use_cross: false
-            install: "musl-tools"
-
-          - target: aarch64-unknown-linux-musl
-            filename: file_zip_linux_arm64
-            host_os: ubuntu-latest
-            use_cross: true
-
-          - target: arm-unknown-linux-musleabihf
-            filename: file_zip_linux_arm
-            host_os: ubuntu-latest
-            use_cross: true
-
-          - target: i686-unknown-linux-musl
-            filename: file_zip_linux_386
-            host_os: ubuntu-latest
-            use_cross: true
+#          - target: x86_64-pc-windows-msvc
+#            filename: file_zip_win32_x64.exe
+#            host_os: windows-latest
+#
+#          - target: x86_64-unknown-linux-musl
+#            filename: file_zip_linux_x64
+#            host_os: ubuntu-latest
+#            use_cross: false
+#            install: "musl-tools"
+#
+#          - target: aarch64-unknown-linux-musl
+#            filename: file_zip_linux_arm64
+#            host_os: ubuntu-latest
+#            use_cross: true
+#
+#          - target: arm-unknown-linux-musleabihf
+#            filename: file_zip_linux_arm
+#            host_os: ubuntu-latest
+#            use_cross: true
+#
+#          - target: i686-unknown-linux-musl
+#            filename: file_zip_linux_386
+#            host_os: ubuntu-latest
+#            use_cross: true
 
           - target: mips-unknown-linux-musl
             filename: file_zip_linux_mips
@@ -75,7 +75,7 @@ jobs:
             host_os: ubuntu-latest
             use_cross: true
 
-          - target: powerpc64-unknown-linux-musl
+          - target: powerpc64le-unknown-linux-musl
             filename: file_zip_linux_ppc64
             host_os: ubuntu-latest
 
@@ -105,10 +105,10 @@ jobs:
             host_os: ubuntu-latest
             install: "libc6-dev-i386"
 
-          - target: x86_64-unknown-freebsd
-            filename: file_zip_freebsd_x64
-            host_os: ubuntu-latest
-            use_cross: true
+#          - target: x86_64-unknown-freebsd
+#            filename: file_zip_freebsd_x64
+#            host_os: ubuntu-latest
+#            use_cross: true
 
           - target: armv7-unknown-freebsd
             filename: file_zip_freebsd_arm
@@ -118,19 +118,19 @@ jobs:
             filename: file_zip_freebsd_arm64
             host_os: ubuntu-latest
 
-          - target: x86_64-apple-darwin
-            filename: file_zip_darwin_amd64
-            host_os: macos-latest
-            use_cross: false
-
-          - target: aarch64-apple-darwin
-            filename: file_zip_darwin_arm64
-            host_os: macos-latest
-
-          - target: armv7-linux-androideabi
-            filename: file_zip_android_arm
-            host_os: ubuntu-latest
-            use_cross: true
+#          - target: x86_64-apple-darwin
+#            filename: file_zip_darwin_amd64
+#            host_os: macos-latest
+#            use_cross: false
+#
+#          - target: aarch64-apple-darwin
+#            filename: file_zip_darwin_arm64
+#            host_os: macos-latest
+#
+#          - target: armv7-linux-androideabi
+#            filename: file_zip_android_arm
+#            host_os: ubuntu-latest
+#            use_cross: true
 
           - target: aarch64-linux-android
             filename: file_zip_android_arm64
@@ -158,7 +158,7 @@ jobs:
       - name: Prepare toolchain
         if: ${{ matrix.use_cross }}
         run: |
-          rustup component add rust-src --target ${{ matrix.target }}
+          rustup component add rust-std --target ${{ matrix.target }}
       - name: Build
         if: ${{ matrix.use_cross }}
         run: cross build --release --target ${{ matrix.target }}
