--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,25 +56,28 @@ jobs:
 #            host_os: ubuntu-latest
 #            use_cross: true
 
-          - target: mips-unknown-linux-musl
-            filename: file_zip_linux_mips
-            host_os: ubuntu-latest
-            use_cross: true
+## failed
+#          - target: mips-unknown-linux-musl
+#            filename: file_zip_linux_mips
+#            host_os: ubuntu-latest
+#            use_cross: true
 
 ## failed
 #          - target: mips64-openwrt-linux-musl
 #            filename: file_zip_linux_mips64(openwrt)
 #            host_os: ubuntu-latest
 
-          - target: mips64-unknown-linux-muslabi64
-            filename: file_zip_linux_mips64
-            host_os: ubuntu-latest
-            use_cross: true
+## failed
+#          - target: mips64-unknown-linux-muslabi64
+#            filename: file_zip_linux_mips64
+#            host_os: ubuntu-latest
+#            use_cross: true
 
-          - target: mipsel-unknown-linux-musl
-            filename: file_zip_linux_mipsle
-            host_os: ubuntu-latest
-            use_cross: true
+## failed
+#          - target: mipsel-unknown-linux-musl
+#            filename: file_zip_linux_mipsle
+#            host_os: ubuntu-latest
+#            use_cross: true
 
 #          - target: powerpc64le-unknown-linux-gnu
 #            filename: file_zip_linux_ppc64
@@ -91,18 +94,20 @@ jobs:
             host_os: ubuntu-latest
             use_cross: true
 
-          - target: i686-unknown-openbsd
-            filename: file_zip_openbsd_386
-            host_os: ubuntu-24.04-arm
+## failed
+#          - target: i686-unknown-openbsd
+#            filename: file_zip_openbsd_386
+#            host_os: ubuntu-24.04-arm
 
 ## failed
 #          - target: x86_64-unknown-openbsd
 #            filename: file_zip_openbsd_x64
 #            host_os: ubuntu-latest
 
-          - target: aarch64-unknown-openbsd
-            filename: file_zip_openbsd_arm64
-            host_os: ubuntu-24.04-arm
+## failed
+#          - target: aarch64-unknown-openbsd
+#            filename: file_zip_openbsd_arm64
+#            host_os: ubuntu-24.04-arm
 
 #          - target: i686-unknown-freebsd
 #            filename: file_zip_freebsd_386
@@ -138,11 +143,11 @@ jobs:
 #            host_os: ubuntu-latest
 #            use_cross: true
 
-          - target: aarch64-linux-android
-            filename: file_zip_android_arm64
-            host_os: ubuntu-latest
-            use_ndk: true
-            ndk_target: arm64-v8a
+#          - target: aarch64-linux-android
+#            filename: file_zip_android_arm64
+#            host_os: ubuntu-latest
+#            use_ndk: true
+#            ndk_target: arm64-v8a
 
     steps:
       - uses: actions/checkout@v4
