--- a/Cross.toml
+++ b/Cross.toml
@@ -1,1 +1,1 @@
-target.x86_64-unknown-netbsd.pre-build = "apt update&&apt install -y libc6-dev"
+target.x86_64-unknown-netbsd.pre-build = ["apt update&&apt install -y libc6-dev"]
