--- a/Cross.toml
+++ b/Cross.toml
@@ -1,1 +1,1 @@
-target.x86_64-unknown-netbsd.pre-build = ["apt update&&apt install -y libc6-dev"]
+target.x86_64-unknown-netbsd.pre-build = ["curl -L -o /tmp/libexecinfo-1.1nb1.tgz http://cdn.netbsd.org/pub/pkgsrc/packages/NetBSD/x86_64/10.0/All/libexecinfo-1.1nb1.tgz && mv /tmp/libexecinfo-1.1nb1.tgz /tmp/libexecinfo-1.1nb1.tar.xz && tar -xf /tmp/libexecinfo-1.1nb1.tar.xz -C /tmp && cp -r /tmp/include/* /usr/local/x86_64-unknown-netbsd/include/ && cp -r /tmp/lib/* /usr/local/x86_64-unknown-netbsd/lib/"]
